--- a/src/pages/Shared/Parallax/Parallax.css
+++ b/src/pages/Shared/Parallax/Parallax.css
@@ -1,39 +1,91 @@
-.parallax-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
-    position: relative;
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font: 400 15px/1.8 'Lato', sans-serif;
+  color: #777;
+}
+
+.bgimg-1,
+.bgimg-2,
+.bgimg-3,
+.bgimg-4 {
+  position: relative;
+  /* opacity: 0.65; */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.bgimg-1 {
+  background-image: url('https://i.ibb.co/vHSMmDf/ciudad-maderas-MXb-M1-Nr-Rqt-I-unsplash.jpg');
+  min-height: 800px;
+}
+
+.bgimg-2 {
+  background-image: url('https://i.ibb.co/1bGYrMj/manuel-moreno-DGa0-LQ0y-DPc-unsplash.jpg');
+  min-height: 800px;
+}
+
+.bgimg-3 {
+  background-image: url('https://i.ibb.co/RBpL8kn/tholaal-mohamed-8s-KTHe-Ggr-UM-unsplash-1.jpg');
+  min-height: 800px;
+}
+
+.bgimg-4 {
+  background-image: url('https://i.ibb.co/hsRNqhv/eiliv-aceron-2-Lzq-R50-NTw-unsplash.jpg');
+  min-height: 800px;
+}
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px 'Lato', sans-serif;
+  color: #111;
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+  .bgimg-1,
+  .bgimg-2,
+  .bgimg-3,
+  .bgimg-4 {
+    background-attachment: scroll;
   }
-  
-  .parallax {
-    background-image: ("https://i.ibb.co/ynL25n3/kelsey-curtis-27u-Gzl-AFw-unsplash.jpg");
-    min-height: 500px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .content {
-    text-align: center;
-    padding: 50px;
-    background-color: rgba(255, 255, 255, 0.7);
-  }
-  
-  .video-parallax {
-    position: relative;
-    height: 500px;
-    overflow: hidden;
-  }
-  
-  video {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-  
-  
+}
+
+
